--- a/package.json
+++ b/package.json
@@ -5,13 +5,28 @@
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist",
+    "package.json",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "lint": "eslint src --fix --ext .js,.ts",
-    "build": "env-cmd -f .env.prod vite build && tsc && tsx ./scripts/build-api.ts",
-    "build:dev": "env-cmd -f .env.dev vite build && tsc && tsx ./scripts/build-api.ts",
-    "build:prod": "env-cmd -f .env.prod vite build && tsc && tsx ./scripts/build-api.ts",
+    "clean": "rimraf dist",
+    "build": "npm run lint && npm run clean && env-cmd -f .env.prod vite build && tsc && tsx ./scripts/build-api.ts",
+    "build:dev": "npm run lint && npm run clean && env-cmd -f .env.dev vite build && tsc && tsx ./scripts/build-api.ts",
+    "build:prod": "npm run lint && npm run clean && env-cmd -f .env.prod vite build && tsc && tsx ./scripts/build-api.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "peerDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/withbbang/k-macho-npm-utils.git"
@@ -32,10 +47,12 @@
     "@typescript-eslint/parser": "^8.41.0",
     "eslint": "^9.34.0",
     "eslint-plugin-jsdoc": "^54.1.1",
+    "rimraf": "^6.0.1",
     "terser": "^5.43.1",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vite": "^7.1.3",
+    "vite-plugin-dts": "^4.5.4",
     "vite-plugin-remove-console": "^2.2.0"
   }
 }
