--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "emitDeclarationOnly": true,
+    "noEmit": false
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "vite.config.ts"],
+  "exclude": ["vite.config.ts", "vite.config.js", "package.json"]
 }
